@@ -9,6 +9,7 @@ gcc-10 (10-20191209-1) experimental; urgency=medium
   * Update debian/copyright for gm2, compiler is now GPL-3+, the runtime
     libraries GPL-3+ plus GCC Runtime Library Exception, version 3.1.
   * Fix libgo build on arm-linux-gnueabi*.
+  * Update debian/copyright for contrib/unicode.
 
  -- Matthias Klose <doko@debian.org>  Mon, 09 Dec 2019 16:46:08 +0100
 
